# TestFlow

./: .gitignore  AGENTS.md  README.md  implementation-plan  package.json  pnpm-lock.yaml  project-scope  tech-stack
backend/: pyproject.toml
backend/app/: __init__.py  command_library.py  config.py  db.py  default_keywords.yaml  errors.py  logging.py  main.py  script_catalog.py  ssh_terminal.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/routes/: cases.py  commands.py  executions.py  framework.py  health.py  keywords.py  reports.py  scp.py  scripts.py  terminal.py  websockets.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/execution/: __init__.py  events.py  models.py  service.py
backend/app/integrations/ssh/: __init__.py  client.py
backend/app/modules/cases/: __init__.py  schemas.py  service.py
backend/app/modules/commands/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/executions/: __init__.py  events.py  models.py  report_files.py  repository.py  runner.py  schemas.py  service.py
backend/app/modules/keywords/: __init__.py  (+3 more)
backend/autotest/: __init__.py  contracts.py  entry.py  mock_runtime.py  real_runtime.py  registry.py  runtime.py
backend/tests/: test_app_foundation.py  test_autotest_adapter.py  test_autotest_runtime_registry.py  test_command_library.py  test_execution_history.py  test_execution_service.py  test_framework_config.py  test_health.py  test_scp_transfer.py  test_script_catalog.py  test_ssh_terminal.py
(+155 files in other folders)
