[project]
name = "testflow-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
